fix: background blue on hero appears on mobile

--- a/public/output.css
+++ b/public/output.css
@@ -742,6 +742,34 @@ video {
   height: 33.333333%;
 }
 
+.h-4 {
+  height: 1rem;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
+.h-6 {
+  height: 1.5rem;
+}
+
+.h-7 {
+  height: 1.75rem;
+}
+
+.h-1 {
+  height: 0.25rem;
+}
+
+.h-16 {
+  height: 4rem;
+}
+
+.h-14 {
+  height: 3.5rem;
+}
+
 .max-h-0 {
   max-height: 0px;
 }
@@ -764,6 +792,14 @@ video {
 
 .min-h-\[260px\] {
   min-height: 260px;
+}
+
+.min-h-\[210px\] {
+  min-height: 210px;
+}
+
+.min-h-\[20px\] {
+  min-height: 20px;
 }
 
 .w-4\/5 {
